// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dotenv-run should give the expected output > dev 1`] = `
"✔ API_AUTH
✔ API_BASE
✔ API_USERS
Hello World https://dotenv-run.dev/api/v1/users
"
`;

exports[`dotenv-run should give the expected output > empty 1`] = `
"✔ API_AUTH
✔ API_USERS
Hello World /api/v1/users
"
`;

exports[`dotenv-run should give the expected output > prod 1`] = `
"✔ API_AUTH
✔ API_BASE
✔ API_USERS
Hello World https://dotenv-run.app/api/v1/users
"
`;
